Modify index.html and set style for header section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header">
             <div class="logo">Header Logo</div>
             <ul class="header-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
         <div class="main">
