--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button class="sign-up-button">Sign up</button>
+                <button class="sign-up-btn">Sign up</button>
             </div>
             <div class="image">
                 <p>this is a placeholder for an image</p>
