Finish styling of sign up and footer sections

--- a/index.html
+++ b/index.html
@@ -56,10 +56,16 @@
         <p class="quote-author">-Thor, God of Thunder</p>
     </div>
 
-    <div class="sign-up-text">
-        <p class="prompt-text">Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button class="sugn-up-btn">Sign up</button>
+    <div class="sign-up-container">
+        <div class="sign-up-text">
+            <div class="left">
+                <p class="prompt-text">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="right">
+                <button class="sign-up-btn">Sign up</button>
+            </div>
+        </div>
     </div>
 
     <footer>Copyright &copy; The Odin Project 2021</footer>
